--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/mihaiconstantin/workshop-building-r-packages/issues"
   },
-  "homepage": "https://github.com/mihaiconstantin/workshop-building-r-packages#readme"
+  "homepage": "https://github.com/mihaiconstantin/workshop-building-r-packages#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "reveal.js": "^3.8.0"
+  }
 }
